--- a/_publications/SSRN-id3481358.md
+++ b/_publications/SSRN-id3481358.md
@@ -3,6 +3,6 @@ title: "Cry-wolf syndrome in recommendation"
 collection: publications
 permalink: /files/SSRN-id3481358
 excerpt: "Baixun Li, Meng Li, Chao Liang."
-date: 
+date: 2022-10-01
 venue: 'Production and Operations Management'
 ---
