--- a/_publications/SSRN-id3481358.md
+++ b/_publications/SSRN-id3481358.md
@@ -1,7 +1,7 @@
 ---
 title: "Cry-wolf syndrome in recommendation" 
 collection: publications
-permalink: /files/SSRN-id3481358
+permalink: /files/SSRN-id3481358.pdf
 excerpt: "Baixun Li, Meng Li, Chao Liang."
 date: 2022-10-01
 venue: 'Production and Operations Management'
